# f1-car

./: .editorconfig  .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
cockpit/: .prettierrc  README.md  eslint.config.js  gen_bridge.sh  package.json  pubspec.yaml  svelte.config.js  vite.config.ts
cockpit/android/app/: build.gradle.kts
cockpit/integration_test/: simple_test.dart
cockpit/ios/Runner/: Info.plist
cockpit/ios/Runner.xcodeproj/: project.pbxproj
cockpit/lib/: main.dart
cockpit/lib/models/: car_configuration.dart  client_message.dart  f1car.dart  radio_connection_state.dart  server_message.dart
cockpit/lib/pages/: f1_home_page.dart  radio_communication_page.dart
cockpit/lib/services/: camera_stream_service.dart  f1_discovery_service.dart  radio_service.dart  udp_camera_service.dart  udp_radio_service.dart
cockpit/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
cockpit/lib/utils/: app_colors.dart  app_typography.dart  assets_path.dart
cockpit/lib/widgets/: app_bar.dart  camera_stream_widget.dart  car_card.dart
cockpit/linux/flutter/: generated_plugins.cmake
cockpit/linux/runner/: my_application.cc
cockpit/macos/Runner.xcodeproj/: project.pbxproj
cockpit/macos/Runner/Configs/: AppInfo.xcconfig
cockpit/rust/: Cargo.toml
cockpit/rust/src/: frb_generated.rs
cockpit/rust/src/api/: discovery.rs  mod.rs  models.rs  radio.rs  simple.rs  telemetry.rs
cockpit/rust_builder/: pubspec.yaml
cockpit/rust_builder/android/: build.gradle  settings.gradle
cockpit/rust_builder/ios/: rust_lib_cockpit.podspec
cockpit/rust_builder/linux/: CMakeLists.txt
cockpit/rust_builder/macos/: rust_lib_cockpit.podspec
cockpit/rust_builder/windows/: CMakeLists.txt
cockpit/src/: app.css
cockpit/src-tauri/: Cargo.toml  tauri.conf.json
cockpit/src-tauri/capabilities/: default.json
cockpit/src-tauri/src/: commands.rs  discovery.rs  joystick.rs  lib.rs  main.rs  types.rs
cockpit/src-tauri/src/commands/: discovery.rs  joystick.rs  mod.rs  ui.rs
cockpit/src/lib/: bindings.ts
cockpit/src/lib/components/: CarCard.svelte  ConnectedCarInfo.svelte  Header.svelte  Joystick.svelte  (+1 more)
cockpit/src/routes/: +layout.svelte  +page.svelte
cockpit/test/: widget_test.dart
cockpit/web/: index.html
cockpit/windows/flutter/: generated_plugins.cmake
cockpit/windows/runner/: Runner.rc
powertrain/: Cargo.toml
radio/: Cargo.toml
radio/assets/: index.html
radio/src/: accelerometer.rs  camera.rs  config.rs  discovery.rs  main.rs  server.rs  streaming.rs  uart.rs
radio/src/camera/: capture.rs  mod.rs  streaming.rs
scripts/: build-radio.sh
telemetry/: Cargo.toml
telemetry/src/: lib.rs
(+16 files in other folders)
