[package]
name = "radio"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
local-ip-address = "0.6.5"
log = "0.4.27"
mdns-sd = "0.13.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
telemetry = { path = "../telemetry" }
tokio = { version = "1.47.0", features = ["full"] }
toml = "0.9.2"
