[package]
name = "radio"
version = "0.1.0"
edition = "2024"

[dependencies]
adxl345_driver = "0.0.6"
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22"
env_logger = "0.11.8"
local-ip-address = "0.6.5"
log = "0.4.27"
mdns-sd = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
telemetry = { path = "../telemetry" }
tokio = { version = "1.47.0", features = ["full"] }
tokio-stream = "0.1"
toml = "0.9.2"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tokio-util = "0.7"
ctrlc = "3.2"
tokio-serial = "5.4.5"
