[package]
name = "rust_lib_cockpit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.98"
flutter_rust_bridge = "=2.11.1"
log = "0.4.27"
mdns-sd = "0.13.11"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
